# SneezeDetector

./: CMakeLists.txt  SneezeDetector.py  detectHotword.py  play_bless.py  trainHotword.py
HotWordDetection/hotword_detection/: dtw.py  hwDetector.py  mfcc.py  wordRecorder.py
ros_package/: README.md  package.xml
ros_package/launch/: sneeze_recognition.launch
