<?xml version="1.0"?>
<package>
  <name>roboy_sneeze_recognition</name>
  <version>0.0.1</version>
  <description>Speech Keyword detector using MFCC and DTW with a threshold on the mean distance to the samples</description>

  <maintainer email="unicorn@roboy.org">Alona Kharchenko</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roboy_communication_cognition</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>roboy_communication_cognition</run_depend>

</package>
